--- a/public/stylus/objects/artists.styl
+++ b/public/stylus/objects/artists.styl
@@ -51,8 +51,8 @@
 	&__featured
 		position absolute
 		top 0
-		left 50%
-		transform translate(-50%, -50%)
+		right 0
+		transform translate(-12.5%, -37.5%)
 		
 // artist-width = 200px
 artist-width = 180px
