--- a/public/stylus/objects/works.styl
+++ b/public/stylus/objects/works.styl
@@ -25,8 +25,8 @@ work-width = 150px
 		&__featured
 			position absolute
 			top 0
-			left 50%
-			transform translate(-50%, -50%)
+			right 0
+			transform translate(-12.5%, -37.5%)
 
 for i in (1..(columns - 1))
 	@media screen and (min-width: work-width*i+1) and (max-width: work-width*(i+1))
