search to works

--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -22,7 +22,7 @@
 	<section class="filters-menu">
 		<div class="filters-menu__search">
 			<div class="search">
-				<input type="text" placeholder="Busca Obras, Artistas y Productos">
+				<input class="js-searcher" type="text" placeholder="Busca Obras, Artistas y Productos">
 				<i class="fa fa-search"></i>
 			</div>
 		</div>
