--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -22,9 +22,13 @@
 	<section class="filters-menu">
 		<div class="filters-menu__search">
 			<div class="search">
-				<input type="text" placeholder="Busca Obras, Artistas y Productos">
 				<i class="fa fa-search"></i>
+				<input class="js-searcher" type="text" placeholder="Busca Obras por Título y Tag">
 			</div>
+			<ul class="search-options js-search-options">
+				<li class="search-option">Título <span class="search-text">oli!</span></li>
+				<li class="search-option">Tag <span class="search-text">oli!</span></li>
+			</ul>
 		</div>
 		<div class="filters-menu__category js-leftFiltersButton">
 			<button class="button-filter js-leftFiltersButton"><i class="fa fa-caret-left"></i> &nbsp Categorías</button>
