--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -81,6 +81,23 @@
 		transform translate(0, -50%)
 		left .75em
 		color gray
+		
+.search-options
+	display none
+	font-family 'Raleway'
+	border-left solid 1px #ddd
+	border-right solid 1px #ddd
+	border-bottom solid 1px #ddd
+	color #333
+	.search-option
+		padding .5rem 1rem
+		cursor pointer
+		.search-text
+			font-weight 600
+		&:not(:last-child)
+			border-bottom solid 1px #ddd
+		&:hover
+			background #ededed
 
 
 /*------------------------------------*
